--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@aspnet/signalr": "^1.1.2",
     "@types/node": "^11.12.2",
-    "bootstrap": "4.0.0",
+    "bootstrap": ">=4.3.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7"
   }
