--- a/DockerFile
+++ b/DockerFile
@@ -1,16 +1,18 @@
-FROM microsoft/dotnet:sdk AS build-env
+FROM mcr.microsoft.com/dotnet/core/sdk:2.1 AS build-env
 WORKDIR /app
 
-# Copy csproj and restore as distinct layers
-COPY *.csproj ./
-RUN dotnet restore
-
-# Copy everything else and build
+# copy everything else and build
 COPY . ./
+RUN dotnet restore 
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
-FROM microsoft/dotnet:aspnetcore-runtime
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.1
 WORKDIR /app
 COPY --from=build-env /app/out .
+
+ENV ASPNETCORE_ENVIRONMENT="Production"
+
+ENV ASPNETCORE_HTTPS_PORT=443
+
 ENTRYPOINT ["dotnet", "TicTacToe.dll"]
